--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -3,6 +3,8 @@ table {
     background-color: #E3E3E3;
     border-collapse: separate;
     border-spacing: 1px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 th, td {
@@ -31,7 +33,7 @@ th {
 
     p {
         display: block;
-       margin: 0;
+        margin: 0;
     }
 
     label {
@@ -97,9 +99,10 @@ th {
         flex-wrap: wrap;
     }
     thead {
-        // border: 4px solid red;
         th {
-            // border: 4px solid green;
+            border: none;
+            background: #e3e3e3;
+
             &:nth-child(1) {
                 width: 1vw;
                 &::before {
@@ -126,14 +129,9 @@ th {
             &:nth-child(7) {
                 width: 16vw;
             }
-            &:nth-child(8) {
-                width: 7px;
-                visibility: hidden;
-            }
         }
     }
     tbody {
-        // border: 4px solid red;
         overflow-y: auto;
         flex-grow: 1;
         height: 50vh;
@@ -177,6 +175,3 @@ th {
         }
     }
 }
-
-
-
